# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/arkui/ace_engine/ace_config.gni")

group("ActsAceEtsModuleAnimationTest") {
  testonly = true
  if (ace_engine_feature_wearable) {
    deps = [
      "ace_ets_module_animation_api11:ActsAceEtsModuleAnimationApi11Test",
      "ace_ets_module_animation_api12:ActsAceEtsModuleAnimationApi12Test",
      "ace_ets_module_animation_api18:ActsAceEtsModuleAnimationApi18Test",
      "ace_ets_module_animation_api20:ActsAceEtsModuleAnimationApi20Test",
      "ace_ets_module_animation1:ActsAceEtsModuleAnimation1Test",
      "ace_ets_module_bindSheet:ActsAceEtsModuleBindSheetTest",
      "ace_ets_module_tabs:ActsAceEtsModuleTabTest",
      "ace_ets_component_AlphabetIndexer:ActsAceEtsComponentAlphabetIndexerTest",
      "ace_ets_component_ArcAlphabetindexer:ActsAceEtsComponentArcAlphabetIndexer1Test",
      "ace_ets_module_animation_api18_static:ActsAceEtsModuleAnimationApi18StaticTest",
      "ace_ets_module_animation_api20_static:ActsAceEtsModuleAnimationApi20StaticTest",
      "ace_ets_module_animation_api11_static:ActsAceEtsModuleAnimationApi11StaticTest",
      "ace_ets_module_animation_api12_static:ActsAceEtsModuleAnimationApi12StaticTest",

    ]
  } else {
    deps = [
      "ace_ets_module_animation_api11:ActsAceEtsModuleAnimationApi11Test",
      "ace_ets_module_animation_api12:ActsAceEtsModuleAnimationApi12Test",
      "ace_ets_module_animation_api18:ActsAceEtsModuleAnimationApi18Test",
      "ace_ets_module_animation_api20:ActsAceEtsModuleAnimationApi20Test",
      "ace_ets_module_animation1:ActsAceEtsModuleAnimation1Test",
      "ace_ets_module_bindSheet:ActsAceEtsModuleBindSheetTest",
      "ace_ets_module_bindSheet_nowear:ActsAceEtsModuleBindsheetNowearTest",
      "ace_ets_module_tabs:ActsAceEtsModuleTabTest",
      "ace_ets_component_AlphabetIndexer:ActsAceEtsComponentAlphabetIndexerTest",
      "ace_ets_component_ArcAlphabetindexer:ActsAceEtsComponentArcAlphabetIndexer1Test",
      "ace_ets_module_animation_api18_static:ActsAceEtsModuleAnimationApi18StaticTest",
      "ace_ets_module_animation_api20_static:ActsAceEtsModuleAnimationApi20StaticTest",
      "ace_ets_module_animation_api11_static:ActsAceEtsModuleAnimationApi11StaticTest",
      "ace_ets_module_animation_api12_static:ActsAceEtsModuleAnimationApi12StaticTest",

    ]
  }
}
